# lit_trainer

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build.bat  build.sh  cli.py  extra_vocabulary.env  pyproject.toml  requirements.txt
docs/: Makefile  conf.py  example.ipynb  make.bat
src/lit_trainer/: __init__.py  constants.py  extra_vocabulary.env  lit_trainer.py
src/lit_trainer/schemes/: adjective.py  noun.py  word.py
src/lit_trainer/vocabulary/: vocabulary.py
tests/: test_lit_trainer.py
