[tool.poetry]
name = "lit_trainer"
version = "0.1.0"
description = "Trainer for memorizing words forms in lithuanian"
authors = ["k_eryomenko"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint.'MESSAGE CONTROL']
disable = '''
    missing-docstring,
    too-few-public-methods,
    redefined-outer-name,
'''

[tool.black]
line-length = 120
skip-string-normalization = true
